Added jquery masonry

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,9 +35,9 @@
 		<ul class="nav pull-right">
 			<% if user_signed_in? %>
 			<li><%= link_to "Edit Profile", edit_user_registration_path %></li>
-			<li><%= link_to "LOGOUT", destroy_user_session_path, method: :delete %></li>
+			<li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
 			<% else %>
-      		<li><%= link_to "LOGIN", new_user_session_path %></li>
+      		<li><%= link_to "Login", new_user_session_path %></li>
       		<% end %>
 	  	</ul>
 
@@ -56,14 +56,7 @@
 
             
 		<%= yield %>
-	
-		</br>
-		</br>
-			<div class="footer">
-				<strong>
-					shareyourtravelphotos.com
-				</strong>
-			</div>
-		</div>
+		
+	</div>
 	</body>
 </html>
